--- a/packages/content-sure/package.json
+++ b/packages/content-sure/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "news_platform",
+  "name": "content-sure",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -30,7 +30,6 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
-    "mongoose": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
