--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "html-to-image": "^1.11.11"
+    "html-to-image": "^1.11.11",
+    "react-scripts": "^5.0.1"
   }
 }
