--- a/packages/apps/content-portal/package.json
+++ b/packages/apps/content-portal/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@contentauth/react": "^0.2.49",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "c2pa": "^0.21.0",
     "html-to-image": "^1.11.11",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
