--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "root",
-  "private": true,
   "version": "1.0.0",
-  "devDependencies": {
-    "lerna": "^8.1.2",
-    "tailwindcss": "^3.4.3"
-  },
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {
-    "html-to-image": "^1.11.11",
-    "react-scripts": "^5.0.1"
+  "dependencies": {},
+  "devDependencies": {
+    "lerna": "^8.1.2"
   }
 }
