feat: add get and patch api for content

--- a/packages/content-sure-service/package.json
+++ b/packages/content-sure-service/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.14.0",
     "multer": "^1.4.5-lts.1",
